--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -81,6 +81,12 @@
 			<version>5.4.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.13</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
