--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.14.1",
     "axios": "^0.21.1",
+    "echarts": "^5.1.1",
     "jsonp": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
